@@ -35,6 +35,7 @@
             Bangle.js: Add setUI custom 'swipe' handler
             Util Timer now runs independently of system time. More accurate on nRF52 (fix #2125)
             Bangle.js2: Battery discharge curve is now scaled better, and setting.json:batFullVoltage can be used to account for differences in sense voltage between devices
+            Bangle.js2: Ensure NRF.setTxPower works for all connections and advertising
 
      2v12 : nRF52840: Flow control XOFF is now sent at only 3/8th full - delays in BLE mean we can sometimes fill our 1k input buffer otherwise
             __FILE__ is now set correctly for apps (fixes 2v11 regression)
